SERVER-50203 Prevent passing unsigned argument a negative value in ephemeral_for_test::RadixStore